--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -782,19 +782,20 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
             }
             model.afterRenderTemplate = function(elements) {
                 if (model.isSurveyEnabled()) {
-                    model.setCurrentInterval(
-                        setInterval(function() {
-                            $.get('/participate/{{experiment.pk}}/check-survey-completed', function(response) {
-                                model.surveyCompleted(response.survey_completed);
-                                if (model.surveyCompleted()) {
-                                    model.clearCurrentInterval();
-                                    model.practiceRoundSurveyCompleted();
-                                }
-                            });
-                        },
-                        6000));
                     switch (model.templateId()) {
                         case "PRACTICE_ROUND_RESULTS":
+                            // FIXME: only set this interval check if we're in the practice round results section.
+                            model.setCurrentInterval(
+                                    setInterval(function() {
+                                        $.get('/participate/{{experiment.pk}}/check-survey-completed', function(response) {
+                                            model.surveyCompleted(response.survey_completed);
+                                            if (model.surveyCompleted()) {
+                                            model.clearCurrentInterval();
+                                            model.practiceRoundSurveyCompleted();
+                                            }
+                                        });
+                                    }, 6000)
+                                );
                         case "FINAL_DEBRIEFING":
                             $('#sidebar').hide();
                             $('#content').removeClass('span8').addClass('span12');
