--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -95,14 +95,17 @@
         <div class='alert alert-message alert-block'>
             <h4><i class='icon-download'></i> Download Data</h4>
             <ul class='inline'>
-                <li><a href='download/csv'><img src='{{STATIC_URL}}images/famfamfam/page_white_text.png' alt='csv' />csv</a></li>
-                <li><a href='download/xls'><img src='{{STATIC_URL}}images/famfamfam/page_white_excel.png' alt='xls'/>xls</a></li>
+                <li><a href='download/csv'><i class='icon-file-text'></i> csv</a></li>
+                <li><a href='download/xls'><img src='{{STATIC_URL}}images/famfamfam/page_white_excel.png' alt='xls'/> excel</a></li>
             </ul>
+            {% comment %}
+            FIXME: disabled for the time being
             <h4><i class='icon-download-alt'></i>Download Configuration Files</h4>
             <ul class='inline'>
-                <li><a href='export/configuration.xml'><i class='icon-cog'></i>xml</a></li>
-                <li><a href='export/configuration.json'><i class='icon-pencil'></i>json</a></li>
+                <li><a href='export/configuration.xml'><i class='icon-cog'></i> xml</a></li>
+                <li><a href='export/configuration.json'><i class='icon-pencil'></i> json</a></li>
             </ul>
+            {% endcomment %}
             <a class='btn btn-danger' data-bind='css: { disabled: isArchived}, click: confirmExperimentControllerAction.bind($data, false)' data-action='complete' data-content='Mark this experiment as completed and archive it.'><i class='icon-save'></i> archive</a>
         </div>
     </div>
