adding basic treatment c instructions

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -190,6 +190,26 @@ Similarly, they may observe your group in the same way.
         </li>
     </ul>
 </script>
+<script type='text/html' id='TREATMENT_C_INSTRUCTIONS'>
+    <h3>Session <span data-bind='text: sessionId'></span> Instructions</h3>
+    <p>
+    In this session, there are two groups or villages.  Both groups share a forest to harvest.  The shared forest has
+    twice the capacity of a single-group forest.  In addition, you may observe the other group, their storage amounts,
+    and their forest status, and they may observe your group in the same way.
+    </p>
+    <h3>Key points</h3>
+    <ul>
+        <li>Two new groups formed at random</li>
+        <li>Groups share a single forest</li>
+        <li>You may observe the other group</li>
+        <li>The other group may observe your group</li>
+    </ul>
+    <ul class='pager'>
+        <li class='next'>
+        <a href='javascript: void()' data-bind='click: participantReady.bind($data, participantGroupId() + " finished treatment C instructions")'>Ok, I am ready to start</a>
+        </li>
+    </ul>
+</script>
 <script type='text/html' id='TREATMENT_D_INSTRUCTIONS'>
 <h3>Session <span data-bind='text: sessionId'></span> Instructions</h3>
 <p>
