--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -721,7 +721,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
                 if (model.templateId() != "REGULAR") {
                     return;
                 }
-                model.setupTour();
+                // model.setupTour();
                 if (! model.alive()) {
                     model.secondsLeft(0);
                     model.clearCurrentInterval();
