fixing typo s/earnings/savings when referring to raw tokens

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -362,7 +362,7 @@ status, and those of your group.  You will be able to text chat with your group 
 </p>
 <h3>Harvest Choice</h3>
 <p>
-Each round you will have a maximum of 1 minute to make a harvest decision.  THere are two ways to submit a harvest
+Each round you will have a maximum of 1 minute to make a harvest decision.  There are two ways to submit a harvest
 decision:
 </p>
 <ol>
@@ -435,7 +435,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
                 <!-- /ko -->
             </tr>
             <tr>
-                <td>Earnings</td>
+                <td>Savings</td>
                 <!-- ko foreach: playerData -->
                 <td data-bind='text: Math.max(0, storage()), css: { "current-player": id() === $root.participantGroupId() }'></td>
                 <!-- /ko -->
