--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -309,6 +309,9 @@ Instead, it grows fastest at one half of full size; <span class='badge badge-suc
 At a size of <span data-bind='text: initialResourceLevel() / 2'></span> trees, the forest will produce <span
 data-bind='text: initialResourceLevel() / 10'></span> trees each season.
 </p>
+<div class='flex-video widescreen'>
+<iframe width='640' height='480' src='//www.youtube.com/embed/eQ-N61ISpBc?rel=0' frameborder='0' allowfullscreen></iframe>
+</div>
 <h4>Sustainable Harvesting</h4>
 <p>
 The highest amount of harvesting that the forest can permanently support occurs when the growth rate is fastest. The
