fixing typos in instructions

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -38,7 +38,7 @@
                 <p>
                     <i class='lighterprints-green icon-leaf'></i> Earn <span class='badge badge-lighterprints-green'>green points</span> by
                     completing challenges.  Rank up by <b>increasing your group's average score, shown in the
-                        Today&quot;s Progress Chart.</b>.
+                        Today's Progress Chart.</b>
                 </p>
                 <p>
                     <i class='icon-star text-gold'></i> Some challenges are unlocked all day, and others are only
