--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -486,7 +486,6 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
 </script>
 
 <script type='text/html' id='tree-template'>
-<div class='alert alert-message'><strong class='badge badge-success' data-bind='text:resourceLevel'></strong> trees</div>
 <div data-bind="visible: isResourceEmpty">
     <div class='well'>
     <center><img src="{% static 'images/bound/depleted-trees.jpg' %}" class="img-polaroid" width="425"
@@ -502,7 +501,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
 <br>
 <table class='group-status table table-bordered table-condensed table-striped'>
     <tbody>
-        <tr><td>forest</td><td data-bind='text:resourceLevel'></td></tr>
+        <tr><td>forest</td><td><strong class='badge badge-success' data-bind='text:resourceLevel'></strong> trees</td></tr>
         <tr><td>average harvest</td><td data-bind='text:averageHarvest().toFixed(1)'></td></tr>
         <tr><td>average earnings</td><td data-bind='text:Math.max(0, averageStorage().toFixed(1))'></td></tr>
         <tr><td>number alive</td><td data-bind='text:numberAlive'></td></tr>
@@ -521,9 +520,10 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
 <div data-bind='css: { span4: canObserveOtherGroup }'>
 <h3 class='compact'>My Group</h3>
 <div data-bind='template: { name: "tree-template", data: myGroup }'></div>
+</div>
 <div data-bind='if: canObserveOtherGroup'>
     <div class='span4'>
-        <h4>Other Group</h4>
+        <h3 class='compact'>Other Group</h3>
         <div data-bind='template: {name: "tree-template", data: otherGroup }'></div>
     </div>
 </div>
@@ -679,8 +679,8 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
                     return 77;
                 }
             });
-            model.resourceImageWidth = ko.observable(11);
-            model.resourceImageHeight = ko.observable(21);
+            model.resourceImageWidth = ko.observable(10);
+            model.resourceImageHeight = ko.observable(20);
             model.rowsToDisplay = function(resourceLevel) {
                 return Math.floor(resourceLevel() / model.resourcesPerRow());
             };
